🐛 fix(custom.css): change color of .navbar strong from white to black for better visibility ✨ feat(custom.css): add text-transform: uppercase to audio element for consistent styling

--- a/app/assets/stylesheets/custom.css
+++ b/app/assets/stylesheets/custom.css
@@ -14,7 +14,7 @@ main {
 }
 
 .navbar strong {
-  color: #fff;
+  color: #000;
 }
 
 .spacing {
@@ -60,6 +60,7 @@ audio {
   color        : var(--primary-inverse);
   font-size    : 14px;
   line-height  : 1;
+  text-transform: uppercase;
 }
 
 a {
